<resources>
    <string name="app_name">Lights</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_accept">Accept</string>
    <string name="action_default">Default</string>
    <string name="action_extra">Extra</string>

    <string name="edit_message">Enter a message</string>
    <string name="edit_code">Enter a code</string>
    <string name="button_send">Send</string>
    <string name="button_send2">Socket Send</string>
    <string name="button_ch1">1</string>
    <string name="button_ch2">2</string>
    <string name="button_ch3">3</string>
    <string name="button_ch4">4</string>
    <string name="button_duty0">0</string>
    <string name="button_duty10">10</string>
    <string name="button_duty25">25</string>
    <string name="button_duty50">50</string>
    <string name="button_duty75">75</string>
    <string name="button_duty100">100</string>
    <string name="button_test">test</string>
    <string name="title_activity_display_message">My message</string>
    <string name="ServerIPString">10.0.0.11</string>
    <string name="ServerPortString">5011</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_set_preference">Settings</string>

    <string name="light_1">Bedroom</string>
    <string name="dialog_brightness_bar">Brightness bar</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>
