<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mycompanydomain.lights.TestActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Channel" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Duty"
        android:layout_below="@+id/button5" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="10"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Brightness:0"
        android:layout_alignTop="@+id/seekBar1"
        android:layout_toRightOf="@+id/seekBar1"
        android:layout_toEndOf="@+id/seekBar1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Duty Cycle:0"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fade Speed"
        android:layout_below="@+id/seekBar1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Resolution"
        android:layout_below="@+id/button11" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Custom"
        android:layout_below="@+id/button15" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_ch1"
        android:onClick="sendChannel1"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_ch2"
        android:onClick="sendChannel2"
        android:layout_alignTop="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:layout_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_ch3"
        android:onClick="sendChannel3"
        android:layout_alignTop="@+id/button7"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_ch4"
        android:onClick="sendChannel4"
        android:layout_alignTop="@+id/button6"
        android:layout_toRightOf="@+id/button6"
        android:layout_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_duty0"
        android:onClick="sendDuty0"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_duty50"
        android:onClick="sendDuty50"
        android:layout_alignTop="@+id/buttonDuty10"
        android:layout_toRightOf="@+id/buttonDuty10"
        android:layout_toEndOf="@+id/buttonDuty10" />

    <Button
        android:id="@+id/buttonDuty100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_duty100"
        android:onClick="sendDuty100"
        android:layout_alignTop="@+id/button3"
        android:layout_toRightOf="@+id/button3"
        android:layout_toEndOf="@+id/button3" />

    <Button
        android:id="@+id/buttonDuty10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_duty10"
        android:onClick="sendDuty10"
        android:layout_alignTop="@+id/button4"
        android:layout_toRightOf="@+id/button4"
        android:layout_toEndOf="@+id/button4" />

    <EditText
        android:id="@+id/etTextToSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_code"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessageOnSocket"
        android:layout_alignTop="@+id/etTextToSend"
        android:layout_toRightOf="@+id/etTextToSend"
        android:layout_toEndOf="@+id/etTextToSend" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="bar"
        android:onClick="OpenBarDialog"
        android:layout_below="@+id/etTextToSend"
        android:layout_alignLeft="@+id/etTextToSend"
        android:layout_alignStart="@+id/etTextToSend" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="slow"
        android:onClick="sendFadeSpeedSlow"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="med"
        android:onClick="sendFadeSpeedMedium"
        android:layout_alignTop="@+id/button11"
        android:layout_toRightOf="@+id/button11"
        android:layout_toEndOf="@+id/button11" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fast"
        android:onClick="sendFadeSpeedFast"
        android:layout_alignTop="@+id/button12"
        android:layout_toRightOf="@+id/button12"
        android:layout_toEndOf="@+id/button12" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="off"
        android:onClick="sendFadeSpeedOff"
        android:layout_alignTop="@+id/button13"
        android:layout_toRightOf="@+id/button13"
        android:layout_toEndOf="@+id/button13" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="low"
        android:onClick="sendResolutionLow"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="med"
        android:onClick="sendResolutionMedium"
        android:layout_alignTop="@+id/button15"
        android:layout_toRightOf="@+id/button15"
        android:layout_toEndOf="@+id/button15" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="high"
        android:onClick="sendResolutionHigh"
        android:layout_alignTop="@+id/button16"
        android:layout_toRightOf="@+id/button16"
        android:layout_toEndOf="@+id/button16" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="v.high"
        android:onClick="sendResolutionVeryHigh"
        android:layout_alignTop="@+id/button17"
        android:layout_toRightOf="@+id/button17"
        android:layout_toEndOf="@+id/button17" />

    <TextView
        android:id="@+id/tvServerProgramStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="checking server program ..."
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
